--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.0.0
+version: 1.1.0
 history:
+  1.1.0:
+    date: '2022-12-15'
+    title: 'Log'
+    description: 'Add param to show console.log values.'
   1.0.0:
     date: '2022-12-15'
     title: 'First version'
