--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.0
+version: 1.2.0
 history:
+  1.2.0:
+    date: '2022-12-18'
+    title: 'Reset'
+    description: 'Add method .reset().'
   1.1.0:
     date: '2022-12-15'
     title: 'Log'
